# astra-sn

./: .gitignore  README.md
astra-backend/: PITCH.md  README.md  create_sample_model.py  main.py  pyproject.toml  run_server.py  sample_data.csv  sample_request.json  schemas.py  start.sh  test_api.py  test_csv.py
astra-frontend/: README.md  package-lock.json  package.json
astra-frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
astra-frontend/.next/cache/: .rscinfo
astra-frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
astra-frontend/.next/server/app/: page.js  page_client-reference-manifest.js
astra-frontend/.next/server/chunks/: [root-of-the-server]__503ad839._.js.map  node_modules_next_6420c177._.js.map
astra-frontend/.next/static/chunks/: [root-of-the-server]__28bc9c2a._.css  [root-of-the-server]__28bc9c2a._.css.map  _312f687a._.js  _312f687a._.js.map  app_globals_css_bad6b30c._.single.css  app_globals_css_bad6b30c._.single.css.map  app_page_tsx_b9303a85._.js  node_modules_2d7a86ac._.js  node_modules_2d7a86ac._.js.map  node_modules_@react-three_fiber_dist_13bb64b2._.js  node_modules_@react-three_fiber_dist_13bb64b2._.js.map  node_modules_@swc_helpers_cjs_b3dc30d6._.js.map  node_modules_framer-motion_dist_es_f4abe0bb._.js  node_modules_framer-motion_dist_es_f4abe0bb._.js.map  (+14 more)
astra-frontend/app/: layout.tsx  page.tsx
astra-frontend/components/ui/: exoplanet-visualization.tsx  footer.tsx  layout.tsx
astra-frontend/lib/: api.ts
astra-frontend/public/: sample-exoplanet.csv
(+33 files in other folders)
