[project]
name = "astra"
version = "0.1.0"
description = "FastAPI ML prediction service for transiting exoplanets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0,<1.5.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "xgboost>=3.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
